# metis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  PROMPTS.md  README.md  SCAFFOLD.md  STATUS.md  package.json  pnpm-lock.yaml
crates/metis-agents/: Cargo.toml
crates/metis-agents/src/: lib.rs
crates/metis-core/: Cargo.toml
crates/metis-core/src/: lib.rs
crates/metis-gate/: Cargo.toml
crates/metis-gate/src/: lib.rs
crates/metis-llm/: Cargo.toml
crates/metis-llm/src/: lib.rs
crates/metis-log/: Cargo.toml
crates/metis-log/src/: lib.rs
docs/blueprint/: 00_features.md  01_architecture.md  02_roadmap.md  03_tech_spec.md  05_product_experience.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
stitch-exports/: metis_product_requirements.txt
stitch-exports-v2/agent_dashboard_obsidian_silk/: code.html
stitch-exports-v2/confirm_queue_obsidian_silk/: code.html
stitch-exports-v2/event_log_obsidian_silk/: code.html
stitch-exports-v2/obsidian_silk/: DESIGN.md
stitch-exports/agent_dashboard/: code.html
stitch-exports/calendar_agent/: code.html
stitch-exports/confirm_queue/: code.html
stitch-exports/email_agent/: code.html
stitch-exports/event_log/: code.html
stitch-exports/files_agent/: code.html
stitch-exports/main_console/: code.html
stitch-exports/metis/: DESIGN.md
ui/: index.html  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: mock.ts  nav.ts  types.ts
ui/src/lib/components/: AgentCard.svelte  Sidebar.svelte  TierBadge.svelte  TopBar.svelte
ui/src/lib/views/: CalendarAgent.svelte  ConfirmQueue.svelte  Dashboard.svelte  EmailAgent.svelte  EventLog.svelte  FilesAgent.svelte  Settings.svelte
